# parameters-code

./: .envrc  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
code/: .gitignore  CLAUDE.md  Cargo.toml  old.rs  todo.txt
code/public/: index.xml  sitemap.xml
code/public/categories/: index.xml
code/public/tags/: index.xml
code/src/: build.rs  collection.rs  complexity.rs  data.rs  draw.rs  file.rs  main.rs  markdown.rs  pages.rs  processing.rs  raw.rs  simpleindex.rs  table.rs
code/src/cli/: computation.rs  page_build.rs  paths.rs
code/src/complexity/: info.rs  time.rs
code/src/data/: core.rs  data.rs  digraph.rs  enums.rs  id.rs  link.rs  preview.rs  serialize.rs  simple_index.rs  simpleindex.rs
code/src/general/: cache.rs  enums.rs  file.rs  hide.rs  logger.rs  progress.rs  strings.rs  timer.rs  worker.rs
code/src/input/: build.rs  builder.rs  intersectable.rs  parameter.rs  raw.rs  raw_enums.rs  sequence.rs  set.rs  source.rs
code/src/output/: api.rs  color.rs  diagram.rs  dot.rs  draw.rs  markdown.rs  pages.rs  table.rs  to_markdown.rs
code/src/processing/: bibliography.rs  combine.rs  compare.rs  convert.rs  date.rs  processing.rs
code/src/test/: all.rs  collection.rs
code/src/work/: bibliography.rs  combine.rs  compare.rs  convert.rs  date.rs  hide.rs  hierarchy.rs  inference.rs  preview_collection.rs  processing.rs  sets.rs
hops/: .gitignore  Cargo.toml  bacon.toml
hops/src/: collection.rs  main.rs
hops/src/cli/: computation.rs  interactive.rs  mod.rs  page_build.rs
hops/src/data/: bibliography.rs  data.rs  date.rs  enums.rs  (+4 more)
(+64 files in other folders)
