[package]
name = "par"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
regex = "1.9.6"
biblatex = "0.8"
rayon = "1.8"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4.25"
