[package]
name = "hops"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
regex = "1.12.3"
biblatex = "0.11.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
rand = "0.9.2"
termion = "4.0.6"
hops-macros = { path = "../hops-macros" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
